--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,7 @@
 #about {
   min-height: 50vh;
   margin: auto;
+  margin-top: 200px;
   max-width: 800px;
   display: flex;
   flex-direction: column;
