--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,9 +1,9 @@
 :root {
   --lightest-slate: #ccd6f6; /* Headings */
-  --nav-color: #0b1a1a10; /* NavBar */
-  --linear-gradient: linear-gradient(to bottom,#0b1a1a 0%,#030817 20%); /* Page Background Color */
+  --nav-color: #03141a10; /* NavBar */
+  --linear-gradient: linear-gradient(to bottom,#03141a 0%,#030817 20%, #060a17 40%, #030817 60%); /* Page Background Color */
   --green-bright: #64D98A; /* Highlight Text, Glow, Tags */
-  --color-hover: #101224; /* Hover Color */
+  --color-hover: #101224; /* Box Color, Hover Color */
   --off-white: #a8b2d1; /* TEXT MAIN */
   --navy: #0E192D; /* Project Boxes */
   --light-grey: #3d3d3d; /* Divider */
