--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -2,12 +2,12 @@
   position: fixed;
   bottom: 0;
   display: flex;
-  padding: 0px 60px;
-  align-items: center;
   flex-direction: column;
+  padding-left: 60px;
+  align-items: center;
   width: 60px;
   gap: 30px;
-  z-index: 1000;
+  z-index: 500;
 }
 .side-navbar a {
   color: var(--off-white) !important;
