--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -13,16 +13,14 @@
   border-radius: 10px;
   min-height: 300px;
   margin: 1rem 0;
-  background: #030817;
-
-
+  background: #03081790;
 }
 
 .joblist-tabs {
   display: flex;
   flex-direction: column;
   min-width: 160px;
-  background:#030817;
+  background:#03081790;
   padding-top: 0.5rem;
 }
 
