--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@ a {
 }
 
 #content {
-  /* padding: 80px 200px; */
   width: 100vw;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -59,7 +58,7 @@ a {
 }
 
 ::selection {
-  background: var(--light-grey); /* WebKit/Blink Browsers */
+  background: var(--navy);
 }
 
 @media (prefers-reduced-motion: no-preference) {
